# clash_deck_builder

./: .env.docker  .env.docker.example  .env.example  .env.template  .gitignore  AGENTS.md  CACHING.md  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER.md  E2E_TEST_SUMMARY.md  ENVIRONMENT_SETUP.md  ENV_CENTRALIZATION_SUMMARY.md  FIXES_APPLIED.md  GEMINI.md  GOOGLE_OAUTH_SETUP.md  NEXT_STEPS.md  OAUTH_CONFIGURATION_SUMMARY.md  QUICK_START.md  README.md  START_APPLICATION.md  TASK_15_COMPLETION_SUMMARY.md  TROUBLESHOOTING.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  env-config.md  mkdocs.yml  package-lock.json  playwright.config.ts  pyproject.toml  run-all-tests.ps1  run-all-tests.sh  run-e2e-tests.sh  start-backend.sh  start-dev.bat  start-frontend.sh  (+1 more)
backend/: .dockerignore  .env.example  Dockerfile  TEST_RESULTS.md  docker-entrypoint.sh  health_check.py  pyproject.toml  validate_test_setup.py
backend/docs/: authentication_endpoints.md  profile_endpoints.md
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  auth.py  cards.py  decks.py  profile.py
backend/src/exceptions/: __init__.py  auth_exceptions.py  handlers.py
backend/src/middleware/: __init__.py  auth_middleware.py
backend/src/models/: __init__.py  card.py  deck.py  schema.sql  user.py
backend/src/scripts/: __init__.py  ingest_cards.py
backend/src/services/: __init__.py  auth_service.py  card_service.py  clash_api_service.py  deck_service.py  migration_service.py  (+1 more)
backend/tests/: README.md  conftest.py  run_integration_tests.py  test_api_integration.py  test_auth_endpoints.py  test_auth_integration.py  test_auth_service.py  test_deck_service.py  test_profile_endpoints.py  test_user_service.py
(+287 files in other folders)
