[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.9.0",
    "fastapi>=0.118.0",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "mysql-connector-python>=9.4.0",
    "pytest-asyncio>=1.2.0",
    "uvicorn>=0.37.0",
]
